// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TransactionHistoryItem /> should render correctly tx type recieved 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <./index
    data={
        Object {
            "address": "0x0000",
            "amount": "0.000000000000000001",
            "coin": "UKG",
            "confirmations": 204,
            "fiatValue": "987.365",
            "from": "60c482eB985EC9F3e364eEc0a904C44C23",
            "time": 1995-01-09T04:19:09.000Z,
            "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "data": Object {
        "address": "0x0000",
        "amount": "0.000000000000000001",
        "coin": "UKG",
        "confirmations": 204,
        "fiatValue": "987.365",
        "from": "60c482eB985EC9F3e364eEc0a904C44C23",
        "time": 1995-01-09T04:19:09.000Z,
        "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "./index",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "data": Object {
          "address": "0x0000",
          "amount": "0.000000000000000001",
          "coin": "UKG",
          "confirmations": 204,
          "fiatValue": "987.365",
          "from": "60c482eB985EC9F3e364eEc0a904C44C23",
          "time": 1995-01-09T04:19:09.000Z,
          "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "./index",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<TransactionHistoryItem /> should render correctly tx type sent 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <./index
    data={
        Object {
            "address": "0x0000",
            "amount": "0.000000000000000001",
            "coin": "UKG",
            "confirmations": 204,
            "fiatValue": "987.365",
            "from": null,
            "time": 1995-01-09T04:19:09.000Z,
            "to": "0x000",
            "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "data": Object {
        "address": "0x0000",
        "amount": "0.000000000000000001",
        "coin": "UKG",
        "confirmations": 204,
        "fiatValue": "987.365",
        "from": null,
        "time": 1995-01-09T04:19:09.000Z,
        "to": "0x000",
        "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
      },
    },
    "ref": null,
    "rendered": null,
    "type": "./index",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "data": Object {
          "address": "0x0000",
          "amount": "0.000000000000000001",
          "coin": "UKG",
          "confirmations": 204,
          "fiatValue": "987.365",
          "from": null,
          "time": 1995-01-09T04:19:09.000Z,
          "to": "0x000",
          "txnId": "0x4891ee9bc872f5ea35b1dd3b7384bdc4a4c26f63ee7036f83568c8612603ed63",
        },
      },
      "ref": null,
      "rendered": null,
      "type": "./index",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
